syntax = "proto3";
option csharp_namespace = "ProductGrpc";
package profile;
service ProductService {
  rpc IsProductAvailable (IsProductAvailableRequestGrpc) returns (IsProductAvailableResponseGrpc);
  rpc GetProducts (GetProductsRequestGrpc) returns (GetProductsResponseGrpc);
}

message IsProductAvailableResponseGrpc {
  bool isAvailable = 1;
}
message IsProductAvailableRequestGrpc {
  string id = 1;
  int32 quantity = 2;
}

message GetProductsRequestGrpc {
  repeated BasketItemRequest items = 1;
}
message GetProductsResponseGrpc {
  repeated Product products = 1;
}

message BasketItemRequest {
  string id = 1;
  int32 qty = 2;
}
message Product {
  string id = 1;
  string name = 2;
  int32 qty = 3;
  int64 price = 4;
  string currency = 5;
  string imageUrl = 6;
}